comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
             <article>
-                <h2>Artigo 001</h2>
-                <p>Texto artigo 001</p>
+                <h2>Curso de HTML5 com CSS3</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem eos sint eligendi voluptatibus, necessitatibus, iure dignissimos totam consectetur autem minus maxime beatae sapiente accusantium odio obcaecati tenetur id maiores reiciendis?</p>
             </article>
             <article>
-                <h2>Artigo 002</h2>
-                <p>Texto artigo 002</p>
+                <h2>Curso de JavaScript</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse ullam qui odio cum laudantium modi magnam commodi aspernatur doloremque repellendus ducimus veritatis pariatur eos assumenda perspiciatis non laborum, animi debitis!</p>
             </article>
     </main>
 </body>
